--- a/.air.toml
+++ b/.air.toml
@@ -1,11 +1,11 @@
-root = "."
+root = "./app"
 testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
 args_bin = []
 bin = "./tmp/main"
-cmd = "templ generate && go build -o ./tmp/main ./cmd/twopecans/main.go"
+cmd = "templ generate && go build -o ./tmp/main main.go"
 delay = 1000
 exclude_dir = ["assets", "tmp", "vendor", "testdata"]
 exclude_file = []
