--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,9 +1,9 @@
 FROM golang:latest
-WORKDIR /
+WORKDIR /app
 RUN go install github.com/air-verse/air@latest
 RUN go install github.com/a-h/templ/cmd/templ@latest
-COPY go.mod go.sum ./
+COPY go.mod go.sum .
 RUN go mod download
-COPY . /app
+COPY . .
 EXPOSE 4321
-CMD ["air", "-c", "/app/.air.toml"]
+CMD ["air", "-c", ".air.toml"]
